# Polyhedra

./: .env.example  .gitignore  CONTRIBUTING.md  DEV_SETUP.md  IDE_CONFIG_GUIDE.md  INSTALL.md  LICENSE  PROJECT_SETUP.md  QA_SUMMARY.md  README.md  demo_search.py  dev.bat  dev.ps1  pyproject.toml  run_demo.bat  run_demo.ps1  startGuide.txt  test.bat  test.ps1  test_citation_manager.py  test_error_recovery.py  test_fix.py  test_quick.bat  test_quick.ps1  test_semantic_scholar.py  test_tools_interactive.py
.github/: copilot-instructions.md
docs/: API.md  ARCHITECTURE.md  ERROR_HANDLING.md  FIXES_SUMMARY.md  FIX_GUIDE.md  MANUAL_TESTING.md  MIGRATION_V2.1.md  POWERSHELL_FIX.md  PROJECT_COMPLETION.md  QUICK_START_NO_PS.md  SETUP.md  STARTUP_FLOWCHART.md  START_GUIDE.md  USER_GUIDE.md  WORKFLOWS.md  prd-v2.1.md  prd.md
docs/epics/: EPIC-001-polyhedra-mvp.md  EPIC-V2.1-001-core-llm-integration.md  EPIC-V2.1-002-custom-agent-mode.md
docs/stories/: README.md  STORY-001-semantic-scholar-integration.md  STORY-002-citation-management.md  STORY-003-rag-retrieval.md  STORY-004-file-context-management.md  STORY-005-project-initialization.md  STORY-006-mcp-server-core.md  STORY-007-tool-implementations.md  STORY-008-ide-integration.md  STORY-009-integration-testing.md  STORY-010-error-handling.md  STORY-011-documentation.md  STORY-012-package-publish.md  STORY-V2.1-001-llm-service-foundation.md  STORY-V2.1-002-literature-review-service.md  STORY-V2.1-003-mcp-tool-integration.md  STORY-V2.1-004-cost-estimation.md  STORY-V2.1-005-documentation-updates.md  STORY-V2.1-006-integration-testing.md  STORY-V2.1-007-agent-orchestration.md  STORY-V2.1-008-intent-understanding.md  STORY-V2.1-009-research-workflows.md  STORY-V2.1-010-error-recovery.md
examples/literature_reviews/: example-standard-review.md
ide-integration/: IMPLEMENTATION.md  README.md  SETUP_GUIDE.md
src/polyhedra/: __init__.py  (+1 more)
tests/: conftest.py  test_error_handling.py  test_integration_workflows.py  test_project_setup.py  test_server.py
(+49 files in other folders)
